<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="20dp"
  >

  <ImageView
    android:layout_width="120dp"
    android:layout_height="120dp"
    android:layout_gravity="center"
    android:src="@mipmap/ic_launcher"
    />

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/location_provider"
    android:textColor="#000044"
    android:textSize="20sp"
    android:textStyle="bold"
    />

  <TextView
    android:id="@+id/version"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:textSize="16sp"
    />

  <TextView
    android:text="@string/info_developer_url"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:gravity="center"
    android:textStyle="bold"
    />

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:gravity="center"
    android:text="@string/info_description"
    />

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:gravity="center"
    android:text="@string/info_icon_license"
    />

</LinearLayout>
